--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2024.04.01"
 coroutine = "1.3.9"
 hiltVersion = "2.55"
 hiltNavigationComposeVersion = "1.2.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,10 +33,13 @@ coroutine_android = {group = "org.jetbrains.kotlinx", name="kotlinx-coroutines-a
 hilt = {group="com.google.dagger", name="hilt-android", version.ref="hiltVersion"}
 hilt_compiler = {group="com.google.dagger", name="hilt-compiler", version.ref="hiltVersion"}
 hilt_navigation_compose = {module="androidx.hilt:hilt-navigation-compose", version.ref="hiltNavigationComposeVersion"}
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt-android = {id="com.google.dagger.hilt.android", version.ref="hiltVersion"}
+android-library = { id = "com.android.library", version.ref = "agp" }
 
