--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ hiltVersion = "2.55"
 hiltNavigationComposeVersion = "1.2.0"
 appcompat = "1.7.0"
 material = "1.12.0"
+splashScreen = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +36,7 @@ hilt_compiler = {group="com.google.dagger", name="hilt-compiler", version.ref="h
 hilt_navigation_compose = {module="androidx.hilt:hilt-navigation-compose", version.ref="hiltNavigationComposeVersion"}
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+splash-screen = {group="androidx.core", name="core-splashscreen", version.ref="splashScreen"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
