--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 splashScreen = "1.0.1"
 coilVersion = "3.1.0"
+lottieVersion="6.6.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,8 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 splash-screen = {group="androidx.core", name="core-splashscreen", version.ref="splashScreen"}
 coil = {group="io.coil-kt.coil3", name="coil-compose", version.ref="coilVersion"}
+coil_network = {group="io.coil-kt.coil3", name="coil-network-okhttp", version.ref="coilVersion"}
+lottie = {group="com.airbnb.android", name="lottie", version.ref="lottieVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
